# media-masher

./: .gitignore  CMakeLists.txt  README.md
include/: DistanceMetric.h  FrameManipulator.h
modules/: BlockReplaceManipulator.h  GrayscaleManipulator.h  LinearDistanceMetric.h
src/: main.cpp
